# Taliro

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  lefthook.yml
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/encode/: mod.rs
domain/src/entities/: mod.rs
domain/src/entities/block/: mod.rs
domain/src/entities/transaction/: mod.rs
domain/src/ext/: mod.rs
domain/src/genesis/: config.rs
domain/src/repos/blockchain/: mod.rs
domain/src/repos/network/: mod.rs
domain/src/repos/outbox/: mod.rs
domain/src/repos/utxo/: mod.rs
domain/src/system/: mod.rs
domain/src/system/blockchain/: mod.rs  tests.rs
domain/src/system/mempool/: mod.rs  tests.rs
domain/src/system/network/: mod.rs
domain/src/system/node/: mod.rs
domain/src/system/queue/: mod.rs  proc.rs  sync.rs
domain/src/system/utxo/: mod.rs  read.rs  write.rs
domain/src/system/validation/: mod.rs
domain/src/types/: mod.rs
domain/src/types/hash/: mod.rs  tests.rs
domain/src/types/network/: mod.rs
domain/src/types/outbox/: mod.rs
domain/src/types/sign/: mod.rs
domain/src/types/time/: mod.rs
domain/src/types/wallet/: mod.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/auth/: master_key.rs  mod.rs
infrastructure/src/bus/: mod.rs
infrastructure/src/cmd/: mod.rs
infrastructure/src/ext/: error.rs  mod.rs  network.rs  tx.rs
infrastructure/src/network/: mod.rs
infrastructure/src/network/behavior/: mod.rs
infrastructure/src/network/engine/: mod.rs
infrastructure/src/network/event/: mod.rs
infrastructure/src/network/handle/: mod.rs
infrastructure/src/network/protocol/: mod.rs
infrastructure/src/network/store/: mod.rs
infrastructure/src/network/validator/: mod.rs  tests.rs
infrastructure/src/repos/: mod.rs
infrastructure/src/repos/blockchain/: mod.rs
infrastructure/src/repos/network/: mod.rs
infrastructure/src/repos/outbox/: mod.rs
infrastructure/src/repos/utxo/: mod.rs
infrastructure/src/storage/: mod.rs
infrastructure/src/tx/: mod.rs
infrastructure/src/tx/ctx/: mod.rs
main/: Cargo.toml
main/src/: main.rs
main/src/bootstrap/: bus.rs  cmd.rs  env.rs  http.rs  mod.rs  network.rs  node.rs  outbox.rs  term.rs
main/src/ext/: mod.rs
presentation/: Cargo.toml
presentation/src/: lib.rs  utils.rs
presentation/src/auth/: mod.rs
presentation/src/conversions/: mod.rs  time.rs
presentation/src/dtos/: mod.rs
presentation/src/http/: mod.rs
presentation/src/types/: error.rs  http.rs  mod.rs
(+130 files in other folders)
