[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }
# Domain-level encoding/decoding
bincode = { version = "2.0.1", features = ["derive"] }
blake2 = "0.10.6"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4.3"
derivative = "2.2.0"
base64 = "0.22.1"
