[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
common = { path = "../common" }
domain = { path = "../domain" }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_order", "preserve_path_order", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = "*"
tower-http = { version = "*", features = ["normalize-path"] }
